set(CXX_TEST "98;11;14")
if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.8)
  set(CXX_TEST "${CXX_TEST}" "17")
endif()
if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.12)
  set(CXX_TEST "${CXX_TEST}" "20")
endif()
if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.20)
  set(CXX_TEST "${CXX_TEST}" "23")
endif()

foreach(STANDARD IN LISTS CXX_TEST)
  add_executable(test_${STANDARD} test.cpp)
  target_link_libraries(test_${STANDARD} PRIVATE source_location PRIVATE doctest_with_main)
  set_target_properties(test_${STANDARD} PROPERTIES CXX_STANDARD ${STANDARD} CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS OFF COMPILE_DEFINITIONS STANDARD="C++${STANDARD}")

  doctest_discover_tests(test_${STANDARD} COMMAND test_${STANDARD})
endforeach()
